--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsc-watch --onsuccess \"node dist/server.js\"",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -34,15 +35,19 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.6",
     "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/module-alias": "^2.0.4",
+    "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.15.32",
     "@types/sharp": "^0.31.1",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "tsc-watch": "^7.1.1",
     "tsconfig-paths": "^4.2.0",
