--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsc-watch --onsuccess \"node dist/server.js\"",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
