--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts" ,"./src/types/**/*.d.ts"]
 }
