--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "tsc-watch --onsuccess \"node dist/server.js\"",
-    "build": "tsc",
+    "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
